<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/listitem_bg_normal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        style="@style/DialogTitle"
        android:drawableLeft="@drawable/icon_alert"
        android:text="@string/alert" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="#000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/item_line_dark" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            style="@style/DialogButton"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <LinearLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/item_line_dark" >
        </LinearLayout>

        <Button
            android:id="@+id/btnOk"
            style="@style/DialogButton"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>